Refactor `RxPepFactory` to replace deprecated `Collectors.toList` with `toList`, simplify annotation filtering logic, and clarify documentation